# VCVI_Replication_Package

./: .gitignore  Google Colab Training Env.txt  Local Training Env.txt  README.md
VCVI/: Blocked_factor.py  FCVI.py  GVC_factor.py  GVC_orthod.py  GVC_orthod_anagrad.py  GVC_orthod_withCM.py  KVC_GVC_orthod.py  KVC_utility.py  MFVI.py  MFVI_anagrad.py  YJ.py  __init__.py  pyproject.toml  rep_kvc.py  setup.py
VCVI/GPU/: Blocked_factor.py  FCVI.py  GVC_factor.py  GVC_orthod.py  GVC_orthod_withCM.py  KVC_GVC_orthod.py  MFVI.py  YJ.py  __init__.py  pyproject.toml
VCVI/SVUC/: Blocked_SVUC.py  GVC_factor_SVUC.py  GVC_orthod_SVUC.py  KVC_SVUC.py  __init__.py
VCVI/spline/: Blocked_spline.py  GVC_factor_spline.py  KVC_spline.py  __init__.py
VCVI_GPU/: Blocked_factor.py  GVC_factor.py  GVC_orthod.py  KVC_GVC_orthod.py  KVC_utility.py  __init__.py  logh_correlation_lasso_GPU.py  logh_logitreg_autodiff_GPU.py  pyproject.toml  setup.py
