[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "VCVI"
version = "0.1.0"
dependencies = [
    "torch>=2.4.0",
    "numpy>=1.26.4",
    "scipy>=1.13.1",
    "bridgestan",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "cmdstanpy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"] 