[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "VCVI"
version = "0.1.0"
dependencies = [
    "torch>=2.4.0",
    "numpy>=1.26.4",
    "scipy>=1.13.1",
    "bridgestan",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "cmdstanpy",
]

[tool.setuptools]
py-modules = [
    "MFVI",
    "FCVI", 
    "GVC_factor",
    "GVC_orthod",
    "KVC_GVC_orthod",
    "Blocked_factor",
    "GVC_orthod_withCM",
    "YJ",
    "MFVI_anagrad",
    "GVC_orthod_anagrad",
    "KVC_utility",
    "rep_kvc"
]
packages = ["spline", "SVUC"] 