[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "VCVI_GPU"
version = "0.1.0"
dependencies = [
    "torch>=2.5.1",
    "numpy>=1.26.4",
    "scipy>=1.13.1",
    "bridgestan",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "cmdstanpy",
]

[tool.setuptools]
py-modules = [
    "MFVI", 
    "FCVI", 
    "GVC_factor", 
    "GVC_orthod", 
    "KVC_GVC_orthod", 
    "Blocked_factor", 
    "GVC_orthod_withCM", 
    "YJ", 
    "logh_logitreg_autodiff_GPU", 
    "logh_correlation_lasso_GPU", 
    "KVC_utility"
] 