[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "VCVI_GPU"
version = "0.1.0"
dependencies = [
    "torch==2.4.0",
    "numpy==1.26.4",
    "scipy==1.13.1",
    "bridgestan==2.6.1",
    "pandas==2.0.3",
    "matplotlib==3.8.4",
    "seaborn==0.13.2",
    "scikit-learn==1.4.2",
    "cmdstanpy>=1.2.4",
    "ipykernel",
]

[tool.setuptools]
packages = ["VCVI_GPU"]
package-dir = {"VCVI_GPU" = "."} 